[package]
name = "crowbar"
version = "0.2.0"
authors = ["Iliana Weller <ilianaw@buttslol.net>"]
description = "Wrapper to simplify writing AWS Lambda functions in Rust (using the Python execution environment)"
readme = "README.md"
repository = "https://github.com/ilianaw/rust-crowbar"
documentation = "https://docs.rs/crowbar"
keywords = ["aws", "lambda"]
license = "MIT/Apache-2.0"
exclude = [".gitignore", "builder", "examples"]

[dependencies]
serde = "1.0"
serde_json = "1.0"
cpython = { version = "0.1", default-features = false }
cpython-json = { version = "0.2", default-features = false }

[features]
default = ["python3-sys"]
python27-sys = ["cpython/python27-sys", "cpython-json/python27-sys"]
python3-sys = ["cpython/python3-sys", "cpython-json/python3-sys"]
