[package]
name = "crowbar"
version = "0.2.0"
authors = [
  "Iliana Weller <ilianaw@buttslol.net>",
  "Naftuli Kay <me@naftuli.wtf>"
]
description = "Wrapper to simplify writing AWS Lambda functions in Rust (using the Python execution environment)"
readme = "README.md"
repository = "https://github.com/ilianaw/rust-crowbar"
documentation = "https://docs.rs/crowbar"
keywords = ["aws", "lambda"]
license = "MIT/Apache-2.0"
exclude = [".gitignore", "builder/**", "examples/**", "test/**"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = "1.0"
serde-aux = "0.5"
serde_derive = "1.0"
serde_json = "1.0"
serde_qs = "0.4"
cpython = { version = "0.1", default-features = false }
cpython-json = { version = "0.2", default-features = false }
error-chain = { version = "0.11.0", optional = true }

[features]
default = ["cpython/python3-sys"]
