[package]
name = "crowbar"
version = "0.3.0"
authors = ["Iliana Weller <ilianaw@buttslol.net>"]
description = "Wrapper to simplify writing AWS Lambda functions in Rust (using the Python execution environment)"
readme = "README.md"
repository = "https://github.com/ilianaw/rust-crowbar"
documentation = "https://docs.rs/crowbar"
keywords = ["aws", "lambda"]
license = "MIT/Apache-2.0"
exclude = [".gitignore", "builder/**", "examples/**", "test/**"]

[dependencies]
serde = "1.0"
serde_json = "1.0"
cpython = { version = "0.2", default-features = false }
cpython-json = { version = "0.3", default-features = false }
error-chain = { version = "0.11.0", optional = true }
log = "0.4"

[features]
default = ["cpython/python3-sys"]
