[package]
name = "crowbar-attr"
version = "0.3.0"
authors = ["Iliana Weller <ilianaw@buttslol.net>"]
description = "Provides rust-crowbar proc macro attribute"
readme = "../README.md"
repository = "https://github.com/ilianaw/rust-crowbar"
documentation = "https://docs.rs/crowbar"
keywords = ["aws", "lambda"]
license = "MIT/Apache-2.0"

[lib]
proc-macro = true

[dependencies]
quote = "0.6"

[dependencies.syn]
version = "0.15"
features = ["full"]