[package]
name = "lambda-ec2-regions"
version = "0.2.0"
authors = ["Iliana Weller <ilianaw@buttslol.net>"]
publish = false

[lib]
name = "lambda"
crate-type = ["cdylib"]

[dependencies]
# Normally you'd write: crowbar = "0.2"
crowbar = { path = "../..", version = "0.2" }
cpython = { version = "0.1", default-features = false }
rusoto_core = "0.25"
rusoto_ec2 = "0.25"

[features]
default = ["cpython/python3-sys"]
