[package]
name = "lambda-echo"
version = "0.1.1"
authors = ["Ian Weller <ianweller@buttslol.net>"]

[lib]
name = "lambda"
crate-type = ["dylib"]

[dependencies]
# Normally you'd write: crowbar = "0.1"
crowbar = { path = "../.." }
cpython = { version = "*", default-features = false, features = ["python27-sys"] }
