[package]
name = "lambda-echo"
version = "0.2.0"
authors = ["Iliana Weller <ilianaw@buttslol.net>"]
publish = false

[lib]
name = "lambda"
crate-type = ["cdylib"]

[dependencies]
# Normally you'd write: crowbar = "0.2"
crowbar = { path = "../..", version = "0.2" }
cpython = { version = "0.1", default-features = false }

[features]
default = ["cpython/python3-sys"]
